--- a/.i3/config
+++ b/.i3/config
@@ -10,7 +10,10 @@
 # Please see http://i3wm.org/docs/userguide.html for a complete reference!
 
 exec --no-startup-id redshift -l 43.464258:-80.52041 &
-exec --no-startup-id xmodmap ~/.swap
+#exec --no-startup-id xmodmap ~/.swap
+exec --no-startup-id setxkbmap -option 'caps:ctrl_modifier'
+exec --no-startup-id xcape -e 'Caps_Lock=Escape' -t 1
+
 exec --no-startup-id xbindkeys
 exec --no-startup-id feh --bg-fill ~/img/wallpaper/t450s.png
 #exec --no-startup-id xrandr --output HDMI1 --auto --left-of eDP1 --output DP2 --left-of HDMI1 --auto
@@ -32,9 +35,10 @@ font pango:Anonymous Pro for Powerline 8
 floating_modifier $mod
 
 # start a terminal
-bindsym $mod+Return exec i3-sensible-terminal
+bindsym $mod+Return exec termite
+bindsym $mod+Shift+Return exec i3-sensible-terminal
 
-bindsym $mod+Shift+Return exec rofi -show ssh
+#bindsym $mod+Shift+Return exec rofi -show ssh
 bindsym $mod+d exec rofi -show run
 
 # kill focused window
@@ -187,6 +191,9 @@ client.unfocused        #333333 #222222 #888888 #292d2e
 client.urgent           #2f343a #900000 #ffffff #900000
 client.placeholder      #000000 #0c0c0c #ffffff #000000
 
-new_window 1pixel
+#new_window 1pixel 0 px
+new_window none
 bindsym $mod+Tab exec i3-msg move workspace to output right
 
+# sudo rfkill unblock all
+# sudo rfkill block bluetooth
