--- a/.config/i3/config
+++ b/.config/i3/config
@@ -11,6 +11,8 @@
 
 set $mod Mod4
 
+set $Locker i3lock && sleep 1
+
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
 font pango:monospace 8
@@ -31,6 +33,8 @@ floating_modifier $mod
 
 # start a terminal
 bindsym $mod+Return exec i3-sensible-terminal
+
+bindsym $mod+Shift+Return exec terminator
 
 # kill focused window
 bindsym $mod+Shift+q kill
@@ -154,3 +158,22 @@ bindsym $mod+r mode "resize"
 bar {
         status_command i3status
 }
+
+# Shutdown, reboot, lock screen
+set $mode_system System (l) lock, (e) logout, (s) suspend, (h) hibernate, (r) reboot, (Shift+s) shutdown
+mode "$mode_system" {
+    bindsym l exec --no-startup-id $Locker, mode "default"
+    bindsym e exec --no-startup-id i3-msg exit, mode "default"
+    bindsym s exec --no-startup-id $Locker && systemctl suspend, mode "default"
+    bindsym h exec --no-startup-id $Locker && systemctl hibernate, mode "default"
+    bindsym r exec --no-startup-id systemctl reboot, mode "default"
+    bindsym Shift+s exec --no-startup-id systemctl poweroff -i, mode "default"
+
+    # back to normal: Enter or Escape
+    bindsym Return mode "default"
+    bindsym Escape mode "default"
+}
+
+bindsym $mod+Esc mode "$mode_system"
+bindsym $mod+z exec i3lock -c eee8d5 && sleep(1) && systemctl suspend
+bindsym $mod+x exec i3lock -c eee8d5 && sleep(1)
