--- a/.config/terminator/config
+++ b/.config/terminator/config
@@ -1,4 +1,5 @@
 [global_config]
+  inactive_color_offset = 0.906542056075
 [keybindings]
 [layouts]
   [[default]]
@@ -11,5 +12,12 @@
 [plugins]
 [profiles]
   [[default]]
-    font = Source Code Pro for Powerline Light 10
+    background_color = "#002b36"
+    background_darkness = 0.41
+    cursor_color = "#aaaaaa"
+    font = Monospace 16
+    foreground_color = "#839496"
+    palette = "#073642:#dc322f:#859900:#b58900:#268bd2:#d33682:#2aa198:#eee8d5:#002b36:#cb4b16:#586e75:#657b83:#839496:#6c71c4:#93a1a1:#fdf6e3"
+    scrollbar_position = hidden
+    show_titlebar = False
     use_system_font = False
