--- a/.i3/config
+++ b/.i3/config
@@ -10,12 +10,17 @@
 # Please see http://i3wm.org/docs/userguide.html for a complete reference!
 
 exec --no-startup-id redshift -l 43.464258:-80.52041 &
-#exec --no-startup-id xmodmap ~/.swap
-exec --no-startup-id setxkbmap -option 'caps:ctrl_modifier'
-exec --no-startup-id xcape -e 'Caps_Lock=Escape' -t 1
+exec --no-startup-id xmodmap ~/.swap
+#exec --no-startup-id setxkbmap -option 'caps:ctrl_modifier'
+#exec --no-startup-id xcape -e 'Caps_Lock=Escape' -t 1
 
 exec --no-startup-id xbindkeys
 exec --no-startup-id feh --bg-fill ~/img/wallpaper/t450s.png
+#exec --no-startup-id xinput set-prop "Synaptics TM3053-004" "Device Enabled" 0
+#exec --no-startup-id xinput set-prop "TPPS/2 IBM TrackPoint" "Device Enabled" 0
+exec --no-startup-id xdotool mousemove 1920 1080
+
+# exec --no-startup-id unclutter -noevents
 #exec --no-startup-id xrandr --output HDMI1 --auto --left-of eDP1 --output DP2 --left-of HDMI1 --auto
 
 set $mod Mod4
@@ -37,6 +42,8 @@ floating_modifier $mod
 # start a terminal
 bindsym $mod+Return exec termite
 bindsym $mod+Shift+Return exec i3-sensible-terminal
+bindsym $mod+n exec "sp next"
+bindsym $mod+p exec "sp prev"
 
 #bindsym $mod+Shift+Return exec rofi -show ssh
 bindsym $mod+d exec rofi -show run
@@ -45,7 +52,7 @@ bindsym $mod+d exec rofi -show run
 bindsym $mod+Shift+c kill
 
 # start dmenu (a program launcher)
-bindsym $mod+p exec dmenu_run
+# bindsym $mod+p exec dmenu_run
 # There also is the (new) i3-dmenu-desktop which only displays applications
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
 # installed.
